test/corpus/elements.txt
================================================================================
Element with text
================================================================================
<p>Hello</p>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Nested elements and whitespace
================================================================================
<div>
  <span>a</span>
  <em>b</em>
</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Self-closing tag
================================================================================
<div />
--------------------------------------------------------------------------------

(document
  (element
    (self_closing_tag
      (tag_name))))

================================================================================
Void elements with and without slash
================================================================================
<br>
<input type="text" />
<slot />
<window />
--------------------------------------------------------------------------------

(document
  (void_element
    (tag_name))
  (void_element
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_text))))
  (void_element
    (tag_name))
  (void_element
    (tag_name)))

================================================================================
Tag name that merely starts with a void name is a normal element
================================================================================
<inputs></inputs>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
Component tags, aliased and fully qualified
================================================================================
<Badge label="new" />
<MyApp.Components.Card>
  <p>body</p>
</MyApp.Components.Card>
--------------------------------------------------------------------------------

(document
  (element
    (self_closing_tag
      (component_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_text)))))
  (element
    (start_tag
      (component_name))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (component_name))))

================================================================================
Dynamic tag name
================================================================================
<{@heading_tag} class="dynamic">{@text}</{@heading_tag}>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (dynamic_tag_name
        (expression
          (expression_value)))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_text))))
    (expression
      (expression_value))
    (end_tag
      (dynamic_tag_name
        (expression
          (expression_value))))))

================================================================================
Doctype
================================================================================
<!DOCTYPE html>
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
Unclosed element recovers with a MISSING end tag
:error
================================================================================
<div>
  <p>text
</div>
--------------------------------------------------------------------------------
