test/corpus/embedded.txt
================================================================================
Script element
================================================================================
<script>
  console.log("hi");
</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (embedded_text)
    (end_tag
      (tag_name))))

================================================================================
Script with attributes
================================================================================
<script type="module" defer>
  export const a = 1;
</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_text)))
      (attribute
        (attribute_name)))
    (embedded_text)
    (end_tag
      (tag_name))))

================================================================================
Style element
================================================================================
<style>
  .a, .b > .c { color: red }
</style>
--------------------------------------------------------------------------------

(document
  (style_element
    (start_tag
      (tag_name))
    (embedded_text)
    (expression
      (expression_value))
    (end_tag
      (tag_name))))

================================================================================
Hologram still evaluates expressions inside script
================================================================================
<script>
  const name = "{@name}";
</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (embedded_text)
    (expression
      (expression_value))
    (embedded_text)
    (end_tag
      (tag_name))))

================================================================================
A tag name that only starts with script is an ordinary element
================================================================================
<scripts></scripts>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
Empty script and style
================================================================================
<script></script>
<style></style>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
JS template literals are not expressions
================================================================================
<script>const t = `${x}` + `a${y}b`;</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (embedded_text)
    (embedded_text)
    (embedded_text)
    (embedded_text)
    (embedded_text)
    (end_tag
      (tag_name))))

================================================================================
Braces in CSS are expressions, matching Hologram
================================================================================
<style>.price::after { content: "$" }</style>
--------------------------------------------------------------------------------

(document
  (style_element
    (start_tag
      (tag_name))
    (embedded_text)
    (expression
      (expression_value))
    (end_tag
      (tag_name))))

================================================================================
Raw block inside style, the idiomatic way to write CSS with braces
================================================================================
<style>
  {%raw}
  body { padding: 1px; }
  {/raw}
</style>
--------------------------------------------------------------------------------

(document
  (style_element
    (start_tag
      (tag_name))
    (raw_block
      (raw_open)
      (raw_text)
      (raw_text)
      (raw_text)
      (raw_close))
    (end_tag
      (tag_name))))

================================================================================
If block inside script keeps its body as script text
================================================================================
<script>
{%if @debug?}
console.log(1);
{%else}
console.log(2);
{/if}
</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (if_block
      (if_open
        (expression_value))
      (embedded_text)
      (else_branch
        (else_directive)
        (embedded_text))
      (if_close))
    (end_tag
      (tag_name))))

================================================================================
For block inside script
================================================================================
<script>
{%for n <- @ns}
console.log({n});
{/for}
</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (for_block
      (for_open
        (expression_value))
      (embedded_text)
      (expression
        (expression_value))
      (embedded_text)
      (for_close))
    (end_tag
      (tag_name))))
