test/corpus/expressions.txt
================================================================================
Simple expression in text
================================================================================
Hello, {@name}!
--------------------------------------------------------------------------------

(document
  (text)
  (expression
    (expression_value))
  (text))

================================================================================
Nested braces: map literal and nested map
================================================================================
{%{a: 1}}
{%{a: %{b: [1, 2]}}}
--------------------------------------------------------------------------------

(document
  (expression
    (expression_value))
  (expression
    (expression_value)))

================================================================================
Braces inside an Elixir string do not close the expression
================================================================================
{"}"}
{"a {b} c"}
--------------------------------------------------------------------------------

(document
  (expression
    (expression_value))
  (expression
    (expression_value)))

================================================================================
String interpolation inside an expression
================================================================================
{"item-#{item.id}"}
--------------------------------------------------------------------------------

(document
  (expression
    (expression_value)))

================================================================================
Escaped quote and charlist inside an expression
================================================================================
{"say \"hi\""}
{'}'}
--------------------------------------------------------------------------------

(document
  (expression
    (expression_value))
  (expression
    (expression_value)))

================================================================================
Operators that look like markup are fine inside braces
================================================================================
{@count > 10 && @count < 100}
--------------------------------------------------------------------------------

(document
  (expression
    (expression_value)))

================================================================================
Empty expression and whitespace-only expression
================================================================================
{}
--------------------------------------------------------------------------------

(document
  (expression))
