test/corpus/text_and_comments.txt
================================================================================
Text keeps inner spaces, punctuation and closing angle brackets
================================================================================
1 > 0, really.
--------------------------------------------------------------------------------

(document
  (text))

================================================================================
Escaped braces in text
================================================================================
Literal: \{not code\} and \\ and \#
--------------------------------------------------------------------------------

(document
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence))

================================================================================
Stray closing brace is literal text
================================================================================
{@a}} tail
--------------------------------------------------------------------------------

(document
  (expression
    (expression_value))
  (text))

================================================================================
Comment with dashes and an expression
================================================================================
<!-- plain - dashed -- {@expr} end -->
--------------------------------------------------------------------------------

(document
  (comment
    (comment_text)
    (comment_text)
    (comment_text)
    (comment_text)
    (comment_text)
    (comment_text)
    (expression
      (expression_value))
    (comment_text)))

================================================================================
Elixir-style interpolation in text is a hash followed by an expression
================================================================================
#{@x}
--------------------------------------------------------------------------------

(document
  (text)
  (expression
    (expression_value)))

================================================================================
Bare less-than in text is an error, matching Hologram
:error
================================================================================
<p>a < b</p>
--------------------------------------------------------------------------------


